--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
+    "moment": "^2.29.4",
     "pinia": "^2.0.28",
     "sweetalert2": "^11.7.2",
     "vee-validate": "^4.7.4",
